<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Molaja</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="caption_default">Caption</string>
    <string name="user_fullname">Florian Pranata</string>
    <string name="user_location">Jakarta, Indonesia</string>

    <string name="profile_transition">ProfileTransition</string>
    <string name="item_detail_transition">ItemDetailTransition</string>
    <string name="app_logo_transition">AppLogoTransition</string>
    <string name="actionbar_background_transition">ActionBarTransition</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="login_form_empty">Username / password cannot be empty.</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username_form_hint">Username</string>
    <string name="password_box_hint">Password</string>
    <string name="fullname_form_hint">Full name</string>
    <string name="email_form_hint">Email address</string>
    <string name="password_confirmation_form_hint">Confirm password</string>
    <string name="enter_details">Enter your details</string>
    <string name="by_signing_up_agree">By signing up, you agree to our terms and conditions.</string>
    <string name="join_molaja_text">Join Molaja by choosing one of these options below.</string>
    <string name="sign_up_using_email">SIGN UP USING EMAIL</string>

    <string name="facebook_app_id">444070625767990</string>
    <string name="logging_you_in">Logging you in...</string>
    <string name="login_failed">Login failed, please try again.</string>
    <string name="log_out">Logging out...</string>
    <string name="logout_failed">Log out failed.</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="choose">Choose</string>
    <string name="welcome_text">Welcome back,</string>
    <string name="pick_image">Pick image</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="molaja_search">Search on Molaja</string>
    <string name="buddies">BUDDIES</string>
    <string name="discuss_something">Discuss something</string>
    <string name="discuss">Discuss</string>
    <string name="path_search">M141,17 A9,9 0 1,1 142,16 L149,23</string>
    <string name="no_new_requests">No new requests</string>
    <string name="reject">Reject</string>
    <string name="request_accepted">Request accepted.</string>
    <string name="request_rejected">Request rejected.</string>
    <string name="trending_searches">Trending searches</string>
    <string name="pending">PENDING</string>
    <string name="add_buddy">ADD BUDDY</string>

    <string-array name="change_profile_picture_options">
        <item>Select from library</item>
        <item>Import from Facebook</item>
        <item>Take a photo</item>
        <item>Remove current photo</item>
    </string-array>

    <string-array name="settings_options">
        <item>Title:PERSONAL</item>
        <item>Update profile</item>
        <item>Change password</item>
        <item>Modify payment methods</item>
        <item>Privacy</item>
        <item>Find friends</item>
        <item>Title:APP SETTINGS</item>
        <item>Notifications</item>
        <item>Discussion settings</item>
        <item>Location services</item>
        <item>Title:ABOUT</item>
        <item>About Molaja</item>
        <item>Terms &amp; conditions</item>
        <item>Help</item>
        <item>Blog</item>
        <item>Log out</item>
    </string-array>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Proin ac elementum quam, quis pretium massa. Ut vel risus et diam semper laoreet.
        Nam sagittis augue vel eros facilisis, ut consequat libero pulvinar.
        Suspendisse bibendum non sapien ac lobortis. Quisque ut nibh rutrum, mattis lacus vel, ornare tortor.
        Nulla facilisi. Duis erat nisi, dignissim at aliquam quis, luctus eget dolor.
        Pellentesque egestas iaculis ante, in aliquet metus pulvinar laoreet.
        Aliquam pellentesque condimentum lectus, id egestas nunc efficitur tincidunt</string>
    <string name="shares">shares</string>
    <string name="likes">likes</string>
    <string name="search_did_not_match_anything">Your search did not match anything.</string>
    <string name="new_discussion">New</string>
    <string name="search">Search</string>
    <string name="action_discussion_settings">Discussion settings</string>
    <string name="action_delete_discussions">Delete discussions</string>
    <string name="action_notifications">Notifications</string>
    <string name="send_a_message">Send a message</string>
    <string name="category_icon_transition">category icon transition</string>
    <string name="say_something">Say something...</string>
    <string name="action_share_other_app">Share using another app</string>
    <string name="share_to_your_friends">Share to your friends</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="items">items</string>
    <string name="rating">rating</string>
    <string name="browse_collections">Browse Collections</string>
    <string name="search_something">Search something...</string>
    <string name="add_to_cart">Add to cart</string>

</resources>