<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_details"
        android:textColor="@color/DarkTeal"
        android:textSize="26sp"
        android:typeface="sans"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/username_form_hint"
        android:typeface="sans"
        android:background="@drawable/login_box" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/fullname_form_hint"
        android:typeface="sans"
        android:background="@drawable/login_box" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/email_form_hint"
        android:typeface="sans"
        android:background="@drawable/login_box" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/password_box_hint"
        android:typeface="sans"
        android:background="@drawable/login_box" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/password_confirmation_form_hint"
        android:typeface="sans"
        android:background="@drawable/login_box" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@color/White"
        android:background="@drawable/btn_bg_teal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/by_signing_up_agree"
        android:textColor="@color/DarkTeal"
        android:textSize="12sp"/>

</LinearLayout>