<?xml version="1.0" encoding="utf-8"?>
<com.molaja.android.widget.ActionBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:alibabi="http://schemas.android.com/apk/res-auto"
    android:id="@+id/actionbar_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal" android:orientation="horizontal"
    android:clickable="true" android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/header_logo_holder"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/shopmode_action_bar_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/CornflowerBlue"/>

    <ImageView
        android:id="@+id/usermode_action_bar_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="@string/actionbar_background_transition"
        android:background="@color/Teal"/>

    <ImageView
        android:id="@+id/action_bar_watermark"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/hangout_actionbar_watermark"/>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_launcher"/>
        <com.molaja.android.widget.CustomTextView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            alibabi:ttf_name="black_jack.ttf"/>
    </LinearLayout>-->
    <ViewSwitcher
        android:id="@+id/actiobar_view_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inAnimation="@anim/fade_in"
        android:outAnimation="@anim/fade_out">

        <com.molaja.android.widget.CustomTextView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:transitionName="@string/app_logo_transition"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:shadowColor="@color/Black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            alibabi:ttf_name="black_jack.ttf"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/action_bar_profile_picture"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/action_bar_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_small_margin"
                android:textColor="@color/White"/>
        </LinearLayout>

    </ViewSwitcher>
    <!--<com.molaja.android.widget.CustomTextView
        android:id="@+id/action_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="Hang Out"
        android:textColor="@android:color/white"
        alibabi:ttf_name="roboto/Roboto-Light.ttf"/>-->
    
    <ImageButton
        android:id="@+id/notif_btn"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_notification"
        android:background="@drawable/actionbar_btn_bg"/>

    <ImageButton
        android:id="@+id/cart_btn"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_cart"
        android:background="@drawable/actionbar_btn_bg"/>

</com.molaja.android.widget.ActionBarLayout>